src/components/Forms/MomentCommentForm/styles.module.css
.form {
  position: relative;
  flex-grow: 1;
  width: auto;
  padding: var(--sp8) var(--sp12);
  cursor: pointer;
  background: var(--color-grey-lighter);
  border-radius: var(--sp8);

  &.focus {
    @mixin border-grey-light;

    padding: 0;
    cursor: initial;
    background: none;
  }
}

.content {
  @mixin hide-scrollbar;

  height: 1.375rem;
  overflow: scroll;

  & :global(.ProseMirror),
  & :global(.tiptap) {
    min-height: 1.375rem;
    max-height: 1.375rem;
  }

  &.focus {
    height: auto;
    min-height: 3rem;
    max-height: 5.5rem;
    padding: var(--sp12);
    margin-bottom: var(--sp8);

    & :global(.ProseMirror),
    & :global(.tiptap) {
      max-height: 5.5rem;
    }
  }
}

.footer {
  @mixin flex-center-end;

  gap: var(--sp4);
  padding: 0 var(--sp8) var(--sp8);

  & .count {
    padding-right: var(--sp20);
    font-size: var(--text14);
    line-height: 1.375rem;
    color: var(--color-negative-red);
  }
}

